Closed Bug 653865 Opened 15 years ago Closed 15 years ago

Trunk builds broken by bug 556214: undeclared 'MonitorAutoEnter'

Categories

(MailNews Core :: Backend, defect)

defect
Not set
blocker

Tracking

(Not tracked)

VERIFIED FIXED
Thunderbird 5.0b1

People

(Reporter: jcranmer, Assigned: Bienvenu)

References

Details

Attachments

(1 file, 2 obsolete files)

All trunk builds of Thunderbird have been broken by bug 556214, due to the decision to make the default monitor non-reentrant. This will probably require an ifdef MOZILLA_AURORA, if we don't already have that kind of thing set up. I see failure in IMAP, but it probably exists in other places as well.
I'll look into this.
Depends on: 556214
MOZILLA_5_0_BRANCH is unchanged. SeaMonkey is affected too, of course. { .../mailnews/imap/src/nsImapProtocol.cpp(1164) : error C2065: 'MonitorAutoEnter' : undeclared identifier [...] } http://mxr.mozilla.org/comm-central/search?string=MonitorAutoEnter&case=1&find=%2Fmailnews%2F "Found 23 matching lines" in that 1 file.
Severity: normal → blocker
Summary: Thunderbird trunk builds broken by bug 556214 → Trunk builds broken by bug 556214: undeclared 'MonitorAutoEnter'
Attached patch Patch v1.0 (obsolete) — Splinter Review
This patch allows SeaMonkey comm-central to build at least.
Attachment #529275 - Flags: review?(dbienvenu)
Hmm -using mozilla::MutexAutoLock; +using mozilla::MonitorAutoLock; Do we need this?
(In reply to comment #3) > Created attachment 529275 [details] [diff] [review] > Patch v1.0 > > This patch allows SeaMonkey comm-central to build at least. This would fail on mozilla-aurora, would it not? I'm almost tempted to do an #ifndef MOZILLA_5_0_BRANCH #define Monitor ReentrantMonitor #define MonitorAutoEnter ReentrantMonitorAutoEnter // etc. #endif
(In reply to comment #5) > (In reply to comment #3) > > Created attachment 529275 [details] [diff] [review] > > Patch v1.0 > > > > This patch allows SeaMonkey comm-central to build at least. > > This would fail on mozilla-aurora, would it not? > > I'm almost tempted to do an > #ifndef MOZILLA_5_0_BRANCH > #define Monitor ReentrantMonitor > #define MonitorAutoEnter ReentrantMonitorAutoEnter > // etc. > #endif right, I'm going to do something like that.
haven't tried trunk, but I think this should build there as well
Assignee: nobody → dbienvenu
> +#ifndef MOZILLA_5_0_BRANCH > + typedef mozilla::ReentrantMonitor ReentrantMonitor; > +#else > + typedef mozilla::Monitor Monitor; > +#endif Why not: #else typedef mozilla::Monitor ReentrantMonitor; #endif Then you could drop the earlier: > +#define ReentrantMonitor Monitor
Attachment #529290 - Attachment is patch: true
this addresses Phillip's comment, and adds a comment about what we should do when we don't have to support 5.0 - it builds on trunk as well, so I think I'll just land it.
Attachment #529290 - Attachment is obsolete: true
Comment on attachment 529294 [details] [diff] [review] patch for checkin checked in
Attachment #529294 - Flags: review+
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Comment on attachment 529275 [details] [diff] [review] Patch v1.0 doesn't build on 5.0
Attachment #529275 - Flags: review?(dbienvenu) → review-
Target Milestone: --- → Thunderbird 3.3a4
Attachment #529275 - Attachment is obsolete: true
(TB) Miramar is still green, SeaMonkey and ThunderbirdTrunk are green again :-) V.Fixed
Status: RESOLVED → VERIFIED
Flags: in-testsuite-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: