fix build bustage, bug 653865, 5.0 parts of patch by bienvenu r=bienvenu