mailnews/imap/src/nsImapProtocol.h
@@ -88,8 +88,12 @@
 #include "nsAutoPtr.h"
 #include "nsIMsgFolder.h"
 #include "nsIMsgAsyncPrompter.h"
+#ifndef MOZILLA_5_0_BRANCH
+#include "mozilla/ReentrantMonitor.h"
+#else
 #include "mozilla/Monitor.h"
-
+#define ReentrantMonitorAutoEnter MonitorAutoEnter
+#endif
 class nsIMAPMessagePartIDArray;
 class nsIMsgIncomingServer;
 class nsIPrefBranch;
@@ -377,15 +381,22 @@ private:
   nsCOMPtr<nsIEventTarget> m_sinkEventTarget;
   nsCOMPtr<nsIThread>      m_iThread;
   PRThread     *m_thread;
-  mozilla::Monitor m_dataAvailableMonitor;   // used to notify the arrival of data from the server
-  mozilla::Monitor m_urlReadyToRunMonitor;   // used to notify the arrival of a new url to be processed
-  mozilla::Monitor m_pseudoInterruptMonitor;
-  mozilla::Monitor m_dataMemberMonitor;
-  mozilla::Monitor m_threadDeathMonitor;
-  mozilla::Monitor m_waitForBodyIdsMonitor;
-  mozilla::Monitor m_fetchMsgListMonitor;
-  mozilla::Monitor m_fetchBodyListMonitor;
-  mozilla::Monitor m_passwordReadyMonitor;
+#ifndef MOZILLA_5_0_BRANCH
+  // When we don't need 5.0 branch, should remove typedef and explicitly
+  // use mozilla::ReentrantMonitor or set the namespace.
+  typedef mozilla::ReentrantMonitor ReentrantMonitor;
+#else
+  typedef mozilla::Monitor ReentrantMonitor;
+#endif
+  ReentrantMonitor m_dataAvailableMonitor;   // used to notify the arrival of data from the server
+  ReentrantMonitor m_urlReadyToRunMonitor;   // used to notify the arrival of a new url to be processed
+  ReentrantMonitor m_pseudoInterruptMonitor;
+  ReentrantMonitor m_dataMemberMonitor;
+  ReentrantMonitor m_threadDeathMonitor;
+  ReentrantMonitor m_waitForBodyIdsMonitor;
+  ReentrantMonitor m_fetchMsgListMonitor;
+  ReentrantMonitor m_fetchBodyListMonitor;
+  ReentrantMonitor m_passwordReadyMonitor;
   mozilla::Mutex mLock;
   // If we get an async password prompt, this is where the UI thread
   // stores the password, before notifying the imap thread of the password
